# llm_cold_case_police

./: .gitignore  README.md  pyproject.toml
cases/toy/cold_case_001/: case.yaml  evidence.json  ground_truth.md  narrative.md
configs/pipelines/: poc_default.yaml  poc_local_minimal.yaml
docs/: Cold_Case_001.md  project_status.md
docs/docs/: README.md  architecture.md  codebase_map.md  continuation_brief.md  empirical_findings.md
docs/docs/status/: 2026-06-30_project_status.md
prompts/ceg/: generate_from_hypothesis.j2
prompts/consortium/: critique.j2  initial_generation.j2  revise.j2  score.j2
prompts/event_tree/: generate_from_hypothesis.j2
prompts/ingestion/: evidence_extraction.j2
prompts/system/: ceg_generator.j2  devils_advocate.j2  event_tree_generator.j2  forensic_analyst.j2  ingestion.j2  investigator.j2
scripts/: inspect_cegpy_edges.py  run_pipeline.py  smoke_test_cegpy.py  smoke_test_ollama.py
src/consortium/: cli.py  io.py
src/consortium/agents/: __init__.py  base.py
src/consortium/ceg/: __init__.py  event_tree_repair.py  event_tree_validator.py  renderer.py  repair.py  tree_to_ceg.py  tree_to_dataframe.py  validator.py
tests/integration/: test_pipeline_end_to_end.py
tests/unit/: test_aggregation.py  test_audit.py  test_ceg_renderer.py  test_ceg_repair.py  test_ceg_stage.py  test_ceg_validator.py  test_clients.py  test_event_tree_repair.py  test_event_tree_schemas.py  test_event_tree_validator.py  test_ingestion.py  test_io.py  test_phased_orchestrator.py  test_schemas.py  test_tree_to_ceg.py  test_tree_to_dataframe.py
(+22 files in other folders)
