[project]
name = "consortium"
version = "0.1.0"
description = "LLM consortium for cold-case hypothesis generation and CEG construction"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Adnan Mahmud", email = "s2887048@ed.ac.uk" },
]
license = { text = "TBD" }

dependencies = [
    # Schemas and validation
    "pydantic>=2.6",
    # Config and templating
    "pyyaml>=6.0",
    "jinja2>=3.1",
    # LLM clients
    "ollama>=0.3",
    "httpx>=0.27",
    # Orchestration
    "autogen-agentchat>=0.4",
    "autogen-ext[openai]>=0.4",
    # UI
    "gradio>=4.40",
    # Graphs
    "networkx>=3.2",
    # CLI
    "typer>=0.12",
    # Logging
    "structlog>=24.1",
    "rich>=13.7",
    "graphviz>=0.20",
    "cegpy>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/consortium"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.scripts]
consortium-run = "consortium.cli:app"